fixed responsive issues on small-medium devices

--- a/scss-partials/_header.scss
+++ b/scss-partials/_header.scss
@@ -276,8 +276,12 @@ body {
 
             margin: 0 15px 0 60px;
 
-            @media screen and (max-width: 800px) {
+            @media screen and (max-width: 950px) {
                 margin: 0 15px;
+            }
+
+            @media screen and (max-width: 850px) {
+                margin: 0;
             }
 
             & > ul {
@@ -291,6 +295,10 @@ body {
                 display: flex;
                 justify-content: space-between;
                 align-items: stretch;
+
+                @media screen and (max-width: 950px) {
+                    justify-content: space-around;
+                }
 
                 & > li {
                     display: flex;
@@ -331,6 +339,10 @@ body {
                         padding: 0 15px;
 
                         text-decoration: none !important;
+
+                        @media screen and (max-width: 850px) {
+                            font-size: 13px;
+                        }
 
                         @media screen and (max-width: 750px) {
                             padding: 0 10px;
