--- a/scss-partials/_myskift.scss
+++ b/scss-partials/_myskift.scss
@@ -4,7 +4,11 @@
 
     position: relative;
 
-    margin: 0 20px;
+    margin: 0 15px 0 0;
+
+    @media screen and (max-width: 950px) {
+        margin: 0 10px 0 0;
+    }
 
     opacity: 1;
 
@@ -206,10 +210,17 @@
         position: relative;
         z-index: 10;
 
+        font-size: 15px;
+
         .sign-in-btn {
             font-size: 15px;
             font-weight: 200;
             color: #252525;
+            white-space: nowrap;
+
+            @media screen and (max-width: 850px) {
+                font-size: 13px;
+            }
 
             &:hover {
                 color:#252525;
